--- a/Mosaic Toolkit/Mosaic Toolkit.csproj
+++ b/Mosaic Toolkit/Mosaic Toolkit.csproj
@@ -34,8 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Intellibox">
-      <HintPath>bin\Intellibox.dll</HintPath>
+    <Reference Include="SearchTextBox">
+      <HintPath>..\..\..\..\..\..\Documents\Visual Studio 2013\Projects\SearchTextBox\SearchTextBox\UIControls\bin\Debug\SearchTextBox.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
